--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "sass": "^1.77.8"
+    "react-simple-typewriter": "^5.0.1",
+    "sass": "^1.77.8",
+    "yup": "^1.4.0"
   }
 }
