--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-simple-typewriter": "^5.0.1",
